# ProjectEuler

./: .gitignore  LICENSE  README.md  pom.xml
AmicableNumbers/: amicable  classpath.txt  pom.xml
AmicableNumbers/src/main/java/com/how_hard_can_it_be/amicablenumbers/: Amicable.java  AmicableNumbersApp.java  AmicableNumbersOptions.java  App.java  NumberProperties.java  NumberType.java  Options.java
Haskell/: README.org
Haskell/Problem001/: Problem001.cabal  README.md
Haskell/Problem001/app/: Main.hs
Haskell/Problem002/: Problem002.cabal  README.md
Haskell/Problem002/app/: Main.hs
Haskell/Problem004/: Problem004.cabal  README.md  math.html  math.wxm
Haskell/Problem004/app/: Main.hs
Haskell/Problem005/: LICENSE  Problem005.cabal  stack.yaml
Haskell/Problem005/Problem005/: Problem005.cabal  README.md  stack.yaml
Haskell/Problem005/Problem005/app/: Main.hs
Haskell/Problem006/: Problem006.cabal  README.md
Haskell/Problem006/src/: Lib.hs
Haskell/Problem008/: Problem008.cabal  README.md
Haskell/Problem008/app/: Main.hs
Haskell/Problem008/src/: Lib.hs
Haskell/Problem009/: Problem009.cabal  README.md
Haskell/Problem009/app/: Main.hs
Haskell/Problem011/: Problem011.cabal  README.md
Haskell/Problem011/src/: Lib.hs
Haskell/Problem031/: Problem031.cabal  README.md  sample-output.txt
Haskell/Problem031/app/: Main.hs
Haskell/Problem031/src/: Lib.hs
Haskell/Problem032/: .gitignore  ChangeLog.md  LICENSE  README.md  notes.org  package.yaml
Haskell/Problem032/app/: Main.hs
Haskell/Problem032/src/: Lib.hs
Haskell/Problem032/test/: Spec.hs
Java/: README.org  pom.xml
Java/AmicableNumbers/: amicable
Java/AmicableNumbers/src/main/java/com/how_hard_can_it_be/amicablenumbers/: AmicableNumbersApp.java
Java/Primes/: digit-replacement.org
Java/Primes/src/main/java/com/how_hard_can_it_be/primes/: Factor.java  PrimesApp.java
Java/Utils/src/main/java/com/how_hard_can_it_be/utils/: App.java  Log.java
Java/lattice/: pom.xml
Java/lattice/src/test/java/com/how_hard_can_it_be/lattice/: AppTest.java
Primes/: primes
Primes/src/main/java/com/how_hard_can_it_be/primes/: App.java  PrimeUtils.java  PrimesOptions.java
Utils/: pom.xml
Utils/src/main/java/com/how_hard_can_it_be/utils/: Log.java
lattice/: classpath.txt  lattice  lattice.html
lattice/src/main/java/com/how_hard_can_it_be/lattice/: LatticeApp.java
