name:                Problem004
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JohnL4/Problem004#readme
license:             MIT
author:              John Lusk
maintainer:          john-haskell-stack@how-hard-can-it-be.com
copyright:           2017 John Lusk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Problem004-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Problem004
  default-language:    Haskell2010

test-suite Problem004-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Problem004
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JohnL4/Problem004
