name:                Problem031
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/JohnL4/Problem031#readme
license:             BSD3
license-file:        LICENSE
author:              John Lusk
maintainer:          john-haskell-stack@how-hard-can-it-be.com
copyright:           2017 John Lusk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/JohnL4/Problem031#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Problem031-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Problem031
                     , time
  default-language:    Haskell2010

test-suite Problem031-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Problem031
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JohnL4/Problem031
